Notify embedder of lost contexts and allow overriding of WebGL support https://bugs.webkit.org/show_bug.cgi?id=101826

Reviewed by Adam Barth.

Source/WebCore:

Add hooks notifying the embedder when OpenGL contexts are lost and
allowing overriding of WebGL support on a per-frame basis.

No tests yet; don't know how to test this solely within WebKit.
Currently developing tests in the Chromium port exercising the
notifications end-to-end. Once those are in place, I'm prepared to
investigate adding tests for all ports.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::create):
  Check whether embedder vetoes creation of new WebGL contexts.
(WebCore::WebGLRenderingContext::loseContextImpl):
  Notify embedder that context was lost.
(WebCore::WebGLRenderingContext::maybeRestoreContext):
  Check whether embedder vetoes restoration of existing WebGL contexts.
* loader/FrameLoaderClient.h:
(FrameLoaderClient):
(WebCore::FrameLoaderClient::allowWebGL):
(WebCore::FrameLoaderClient::didLoseWebGLContext):
  Hooks notifying embedder of lost contexts and asking permission to run WebGL.

Source/WebKit/chromium:

Expose new FrameLoaderClient hooks through Chromium's
WebPermissionClient and WebFrameClient. Downstream browser tests
will exercise this new functionality.

* public/WebFrameClient.h:
(WebFrameClient):
(WebKit::WebFrameClient::didLoseWebGLContext):
* public/WebPermissionClient.h:
(WebPermissionClient):
(WebKit::WebPermissionClient::allowWebGL):
* src/FrameLoaderClientImpl.cpp:
(WebKit):
(WebKit::FrameLoaderClientImpl::allowWebGL):
(WebKit::FrameLoaderClientImpl::didLoseWebGLContext):
* src/FrameLoaderClientImpl.h:
(FrameLoaderClientImpl):


Canonical link: https://commits.webkit.org/120250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134525 268f45cc-cd09-0410-ab3c-d52691b4dbfc